--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<title>Miguel Ccantuta Leon</title>
 
-	<link rel="shortcut icon" href="https://mccantuta.github.ioimages/gt_favicon.png">
+	<link rel="shortcut icon" href="https://mccantuta.github.io/images/gt_favicon.png">
 
 	
 	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
@@ -18,7 +18,7 @@
 	
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
 	
-	<link rel="stylesheet" href="https://mccantuta.github.iocss/styles.css">
+	<link rel="stylesheet" href="https://mccantuta.github.io/css/styles.css">
 
 	
 
@@ -32,7 +32,7 @@
 <header id="header">
 	<div id="head" class="parallax" parallax-speed="2">
 		<h1 id="logo" class="text-center">
-			<img class="img-circle" src="https://mccantuta.github.ioimages/fotoPerfil.png" alt="">
+			<img class="img-circle" src="https://mccantuta.github.io/images/fotoPerfil.png" alt="">
 			<span class="title">Miguel Ccantuta León</span>
 			<span class="tagline">Software Engineer, Java Consultant<br>
 				<a href="">mccantuta@gmail.com</a>
@@ -165,7 +165,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-<script src="https://mccantuta.github.iojs/template.js"></script>
+<script src="https://mccantuta.github.io/js/template.js"></script>
 <script id="dsq-count-scr" src="//personal-website-9.disqus.com/count.js" async></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
