--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="row section topspace">
     <div class="col-md-12">
         <p class="lead text-center text-muted">
-            I'm a Software Enginner and guitar player from Lima - Perú. Today, I'm working as a Java consultant using microservices architectures and researching
+            I'm a Software Enginner and guitar player from Lima - Perú. Today, I'm working as a Java consultant on microservices architectures and researching
             new technologies. I'm interested in learning 
         </p>    
         <br/>
