--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="col-md-12">
         <p class="lead text-center text-muted">
             I'm a Software Enginner and guitar player from Lima - Perú. Today, I'm working as a Java consultant with experience in microservices architectures and researching
-            new technologies. I'm interested in learning 
+            new technologies.
         </p>    
         <br/>
         <br/>
